--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 document.getElementById("timestampCOE").textContent=timestampCOE;
             })
             .catch(error => {
-                document.getElementById('status2').textContent = 'Error';
+                document.getElementById('coe').textContent = 'Error';
             });
     </script>
 </body>
