--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <p>Last updated : <span id="timestampVR">Getting ...</span></p>
         <div class="experiment">
                 <div class="experiment-name">Blynk VR</div>
-                <div class="status" id="statusExp1">Loading...</div>
+                <div class="status" id="VR">Loading...</div>
         </div>
         </div>
         <div class="status-box">
@@ -119,7 +119,7 @@
             <p>Last updated : <span id="timestampCOE">Getting ...</span></p>
         <div class="experiment">
                 <div class="experiment-name">Blynk COE</div>
-                <div class="status" id="statusExp1">Loading...</div>
+                <div class="status" id="COE">Loading...</div>
         </div>
         </div>
         <!-- Add more status boxes as needed -->
