--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
                 <div class="status" id="COE">Loading...</div>
         </div>
         </div>
+            <div class="status-box">
+            <h2>Focal Length</h2>
+            <p>Status: <span id="fl">Loading...</span></p>
+            <p>Last updated : <span id="timestampFL">Getting ...</span></p>
+        <div class="experiment">
+                <div class="experiment-name">Blynk FL</div>
+                <div class="status" id="FL">Loading...</div>
+        </div>
+        </div>
         <!-- Add more status boxes as needed -->
     </div>
     <script>
@@ -141,6 +150,7 @@
 
             checkBlynkStatus('ih9WueVjBqXegKg2efGtVqUVdFRQdhJa', document.getElementById('COE'));
             checkBlynkStatus('vTZNEt9WyE--pOBu6LmH_QMAkoEcC4hd', document.getElementById('VR'));
+            checkBlynkStatus('2rMrMcPwTZnpOnCO9VTSn3pRHrnSMNrF', document.getElementById('FL'));
     </script>
   <script src="script.js">Javscript.</script>
 </body>
