--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
         </div>
             <div class="status-box">
             <h2>Focal Length</h2>
-            <p>Status: <span id="fl">Loading...</span></p>
-            <p>Last updated : <span id="timestampFL">Getting ...</span></p>
+            <p>Status: <span id="fl">Script under test</span></p>
+            <p>Last updated : <span id="timestampFL">Script under test</span></p>
         <div class="experiment">
                 <div class="experiment-name">Blynk FL</div>
                 <div class="status" id="FL">Loading...</div>
