--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         <div class="experiment">
                 <div class="experiment-name">Blynk VR</div>
                 <div class="status" id="VR">Loading...</div>
+                <div id="plot-VR"></div>
         </div>
         </div>
         <div class="status-box">
@@ -121,6 +122,7 @@
         <div class="experiment">
                 <div class="experiment-name">Blynk COE</div>
                 <div class="status" id="COE">Loading...</div>
+                <div id="plot-COE"></div>
         </div>
         </div>
             <div class="status-box">
