--- a/index.html
+++ b/index.html
@@ -156,5 +156,6 @@
             checkBlynkStatus('2rMrMcPwTZnpOnCO9VTSn3pRHrnSMNrF', document.getElementById('FL'));
     </script>
   <script src="script.js">Javscript.</script>
+ <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </body>
 </html>
