--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         <div class="status-box">
             <h2>Vanishing Rod Experiment</h2>
             <p>Status: <span id="vr">Loading...</span></p>
+            <p>Use: <span id="usevr">Loading...</span></p>
             <p>Last updated : <span id="timestampVR">Getting ...</span></p>
         <div class="experiment">
                 <div class="experiment-name">Blynk VR</div>
@@ -118,6 +119,7 @@
         <div class="status-box">
             <h2>Conservation of Mechanical Energy</h2>
             <p>Status: <span id="coe">Loading...</span></p>
+            <p>Use: <span id="usecoe">Loading...</span></p>
             <p>Last updated : <span id="timestampCOE">Getting ...</span></p>
         <div class="experiment">
                 <div class="experiment-name">Blynk COE</div>
@@ -128,6 +130,7 @@
             <div class="status-box">
             <h2>Focal Length</h2>
             <p>Status: <span id="fl">Script under test</span></p>
+            <p>Use: <span id="usefl">Loading...</span></p>
             <p>Last updated : <span id="timestampFL">Script under test</span></p>
         <div class="experiment">
                 <div class="experiment-name">Blynk FL</div>
@@ -137,7 +140,7 @@
         <!-- Add more status boxes as needed -->
     </div>
     <script>
-            function checkBlynkStatus(authToken, statusElement) {
+            function checkBlynkStatus(authToken, statusElement,useEle) {
             fetch(`https://blynk.cloud/external/api/isHardwareConnected?token=${authToken}`)
                     .then(response => response.json())
                     .then(data => {
@@ -149,11 +152,22 @@
                         statusElement.textContent = 'Error';
                         statusElement.style.color = 'red';
                     });
+            fetch(`https://blynk.cloud/external/api/isHardwareConnected?token=${authToken}&v3`)
+                    .then(response => response.json())
+                    .then(data => {
+                        const isUse = data === 1; // Blynk responds with 1 for online, 0 for offline
+                        useEle.textContent = isUse ? 'In Use' : 'Not in use';
+                        useEle.style.color = isUse ? 'red' : 'green';
+                    })
+                    .catch(error => {
+                        useEle.textContent = 'Error';
+                        useEle.style.color = 'red';
+                    });
             };
 
-            checkBlynkStatus('ih9WueVjBqXegKg2efGtVqUVdFRQdhJa', document.getElementById('COE'));
-            checkBlynkStatus('vTZNEt9WyE--pOBu6LmH_QMAkoEcC4hd', document.getElementById('VR'));
-            checkBlynkStatus('2rMrMcPwTZnpOnCO9VTSn3pRHrnSMNrF', document.getElementById('FL'));
+            checkBlynkStatus('ih9WueVjBqXegKg2efGtVqUVdFRQdhJa', document.getElementById('COE'),document.getElementById('usevr'));
+            checkBlynkStatus('vTZNEt9WyE--pOBu6LmH_QMAkoEcC4hd', document.getElementById('VR'),document.getElementById('usecoe'));
+            checkBlynkStatus('2rMrMcPwTZnpOnCO9VTSn3pRHrnSMNrF', document.getElementById('FL'),document.getElementById('usefl'));
     </script>
   <script src="script.js">Javscript.</script>
  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
