--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="experiment">
                 <div class="experiment-name">Blynk VR</div>
                 <div class="status" id="VR">Loading...</div>
-                <div id="plot-VR"></div>
+
         </div>
         </div>
         <div class="status-box">
@@ -124,7 +124,7 @@
         <div class="experiment">
                 <div class="experiment-name">Blynk COE</div>
                 <div class="status" id="COE">Loading...</div>
-                <div id="plot-COE"></div>
+
         </div>
         </div>
             <div class="status-box">
@@ -165,8 +165,8 @@
                     });
             };
 
-            checkBlynkStatus('ih9WueVjBqXegKg2efGtVqUVdFRQdhJa', document.getElementById('COE'),document.getElementById('usevr'));
-            checkBlynkStatus('vTZNEt9WyE--pOBu6LmH_QMAkoEcC4hd', document.getElementById('VR'),document.getElementById('usecoe'));
+            checkBlynkStatus('ih9WueVjBqXegKg2efGtVqUVdFRQdhJa', document.getElementById('COE'),document.getElementById('usecoe'));
+            checkBlynkStatus('vTZNEt9WyE--pOBu6LmH_QMAkoEcC4hd', document.getElementById('VR'),document.getElementById('usevr'));
             checkBlynkStatus('2rMrMcPwTZnpOnCO9VTSn3pRHrnSMNrF', document.getElementById('FL'),document.getElementById('usefl'));
     </script>
   <script src="script.js">Javscript.</script>
