--- a/main.html
+++ b/main.html
@@ -167,7 +167,7 @@
             .then(() => {
               alert('Logout successful!');
               // Redirect to the login page or perform other actions as needed
-              window.location.href = 'login.html'; // Replace 'login.html' with your login page URL
+              window.location.href = 'index.html'; // Replace 'login.html' with your login page URL
             })
             .catch((error) => {
               console.error('Logout failed:', error);
