--- a/main.html
+++ b/main.html
@@ -39,6 +39,15 @@
             border-radius: 5px;
             cursor: pointer;
         }
+        #logoutButton button {
+            background-color: #ff0000;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            margin-right: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
         
         #content {
             display: flex;
