--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
             border-radius: 5px;
             cursor: pointer;
         }
-        #logoutButton button {
+        #logoutButton{
             background-color: #ff0000;
             color: white;
             border: none;
