--- a/main.html
+++ b/main.html
@@ -121,7 +121,7 @@
             <h2>Vanishing Rod Experiment</h2>
             <p>Status: <span id="vr">Loading...</span></p>
             <p>Use: <span id="usevr">Loading...</span></p>
-            <p>Use: <span id="vrlat">Loading...</span></p>
+            <p>Latency: <span id="vrlat">Loading...</span></p>
             <p>Last updated : <span id="timestampVR">Getting ...</span></p>
         <div class="experiment">
                 <div class="experiment-name">Blynk VR</div>
