--- a/main.html
+++ b/main.html
@@ -108,6 +108,7 @@
     <div id="status-bar">
         <h1>Remote Labs - Maintainance Dashboard</h1>
         <div id="buttons">
+            <button onclick="window.location.href='plotCOE.html'">Plots</button>
             <button onclick="window.location.href='https://remote-labs.in'">Remote Labs</button>
             <button onclick="window.location.href='https://spcrc.iiit.ac.in'">SPCRC</button>
             <button id="downloadCsvButton">status CSV</button>
