--- a/main.html
+++ b/main.html
@@ -114,6 +114,7 @@
             <button onclick="window.location.href='https://remote-labs.in'">Remote Labs</button>
             <button onclick="window.location.href='https://spcrc.iiit.ac.in'">SPCRC</button>
             <button id="downloadCsvButton">status CSV</button>
+            <button id="downloadCsvButton">Inventory</button>
             
             <button id="logoutButton">Logout</button>
             <!-- Add more buttons as needed -->
