--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="10" />
-    <title>RTL - Experiment Status</title>
+    <title>RLabs - Experiments Status</title>
     <style>
         body {
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -106,7 +106,7 @@
 </head>
 <body>
     <div id="status-bar">
-        <h1>Remote Labs - Maintainance Dashboard</h1>
+        <h1>Remote Labs - Maintenance Dashboard</h1>
         <div id="buttons">
             <button onclick="window.location.href='plotCOE.html'">COE plot</button>
             <button onclick="window.location.href='plotVR.html'">VR plot</button>
@@ -114,7 +114,7 @@
             <button onclick="window.location.href='https://remote-labs.in'">Remote Labs</button>
             <button onclick="window.location.href='https://spcrc.iiit.ac.in'">SPCRC</button>
             <button id="downloadCsvButton">status CSV</button>
-            <button id="downloadCsvButton">Inventory</button>
+            <button onclick="window.location.href='https://iiitaphyd-my.sharepoint.com/:x:/r/personal/remote_labs_research_iiit_ac_in/_layouts/15/Doc.aspx?sourcedoc=%7BE3D2FE0D-035B-4C3D-BA28-B805341BE0DB%7D&file=Remote%20Labs%20Inventory%20June%202024.xlsx&fromShare=true&action=default&mobileredirect=true'">Inventory RLabs</button>
             
             <button id="logoutButton">Logout</button>
             <!-- Add more buttons as needed -->
