--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RTL -Maintainance Login</title>
+  <title>RLabs Maintenance - Login Page</title>
   <!-- Add Firebase SDK scripts here -->
   <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-auth-compat.js"></script>
