--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 </head>
 <body>
   <div class="form-container">
-    <h1>RTL - Maintainance Login </h1>
+    <h1>RLabs Maintenance - Login Page</h1>
     <form id="loginForm">
       <label for="email">Email:</label>
-      <input type="email" id="email" required placeholder="RTL members mails already in databse...">
+      <input type="email" id="email" required placeholder="RLabs members emails already in database...">
       <label for="password">Password:</label>
       <input type="password" id="password" required placeholder="Password here">
       <button type="submit">Login</button>
