--- a/main.html
+++ b/main.html
@@ -108,9 +108,11 @@
     <div id="status-bar">
         <h1>Remote Labs - Maintenance Dashboard</h1>
         <div id="buttons">
-            <button onclick="window.location.href='plotCOE.html'">COE plot</button>
+            <button onclick="window.location.href='main.html'">Home</button>
+            <button onclick="window.location.href='experiment_plots.html'">Experiment Plot</button>
+<!--             <button onclick="window.location.href='plotCOE.html'">COE plot</button>
             <button onclick="window.location.href='plotVR.html'">VR plot</button>
-            <button onclick="window.location.href='plotFL.html'">FL plot</button>
+            <button onclick="window.location.href='plotFL.html'">FL plot</button> -->
             <button onclick="window.location.href='https://remote-labs.in'">Remote Labs</button>
             <button onclick="window.location.href='https://spcrc.iiit.ac.in'">SPCRC</button>
             <button id="downloadCsvButton">status CSV</button>
